<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/mImageTitleBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:padding="5dp"
            android:src="@drawable/mg_ic_toolbar_back"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="个人中心"
            android:textColor="@color/text_4c"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/mg_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/fragment_icon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_stroke_white"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="昵称："
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/fragment_account_nickname_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:background="@null"
                        android:includeFontPadding="true"
                        android:maxEms="7"
                        android:maxHeight="30dp"
                        android:maxLength="7"
                        android:minWidth="120dp"
                        android:singleLine="true"
                        android:text="未设置昵称"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/fragment_account_edit_img"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="4dp"
                        android:padding="5dp"
                        android:src="@drawable/com_xy_xylogin_account_editname" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/mg_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="账号："
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/fragment_account_account_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="TextView"
                        android:textColor="@color/gray2"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_corner_stroke_white"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <LinearLayout
                    android:id="@+id/fragment_account_change_pwd_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:id="@+id/xy_fragment_account_sercuity_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="修改密码"
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/com_xy_xylogin_next_imag" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/mg_line" />

                <LinearLayout
                    android:id="@+id/fragment_account_account_security_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:id="@+id/xy_fragment_account_sercuity_way_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="手机绑定"
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/fragment_account_security_tip_tv"
                        android:layout_width="50dp"
                        android:layout_height="18dp"
                        android:text=""
                        android:textColor="@color/text_999"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/com_xy_xylogin_next_imag" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_corner_stroke_white"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <LinearLayout
                    android:id="@+id/fragment_account_recharge_record_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="充值记录"
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/com_xy_xylogin_next_imag" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_corner_stroke_white"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <LinearLayout
                    android:id="@+id/fragment_account_real_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="实名认证"
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/mViewRealNameRedPoint"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:background="@drawable/shape_circle_red"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/com_xy_xylogin_next_imag" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_corner_stroke_white"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="自动登录游戏"
                        android:textColor="#7f7f7f"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/fragment_account_auto_login_cb"
                        android:layout_width="50dp"
                        android:layout_height="22dp"
                        android:layout_weight="0"
                        android:background="@drawable/auto_login_cb_selector"
                        android:button="@null"
                        android:checked="true" />
                </LinearLayout>

                <TextView
                    android:id="@+id/fragment_account_autologin_tip_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/close_to_select_other_account"
                    android:textColor="@color/gray2"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_account_recharge_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/drawable_exit_account_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="切换账号"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_account_tip_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/account_page_tip_qmqj"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fragment_account_version_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/version_code"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>